--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ nav img{
     border-radius: 25px;
     background-image:linear-gradient(to right, #c96666, #f0cb35);
 }
+.name-color{
+    color: rgb(235, 95, 1);
+}
 /*-------------------section1----------------------------*/
 
 .section1 img{
@@ -71,9 +74,7 @@ nav img{
 .section1 h1{
     font-size: 45px;
 }
-.section1 .name-color{
-    color: rgb(235, 95, 1);
-}
+
 .section1 p{
     text-align: justify;
 }
@@ -98,17 +99,39 @@ nav img{
    font-size: 35px;
 }
 /*-------------Recipie section -----------------------*/
-.recipies{
+.recipies-section{
+    width: 100%;
+    height: auto;
     text-align: center;
+    margin-bottom: 100px;
+   
 }
-.recipies .half-section{
+.recipies{
     display: flex;
+    align-items:center;
+    justify-content:space-between;
+    width: 80%;
+    height: 100%;
+    margin:0 10% 0% 10%;
     
-    flex-direction: row;
-    margin: 5%;
-    border: 2px solid;
 }
-.recipie-item{
-    margin: 0;
-padding: 0;
+.recipies-item{
+    text-align: justify;
+    width: 30%;
+    border-radius: 15px;
+    box-shadow: 0px 3px 4px 6px #88888831;
+    margin:15px;
+    padding:10px;
+}
+.recipies-item img{
+ width: 100%;
+ height: 40%;
+ border-radius: 15px;
+}
+/*-------------------------footer-----------------------*/
+footer {
+    background-color: black;
+}
+footer h1{
+    color: rgb(255, 245, 245);
 }
