--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ nav img{
     padding: 8px 12px;
     
 }
+.nav-list ul li a{
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+}
 .nav-list ul li::after{
     content: '';
     width: 0;
@@ -57,7 +62,7 @@ nav img{
     border-radius: 25px;
     background-image:linear-gradient(to right, #c96666, #f0cb35);
 }
-.name-color{
+.span-color{
     color: rgb(235, 95, 1);
 }
 /*-------------------section1----------------------------*/
@@ -131,7 +136,11 @@ nav img{
 /*-------------------------footer-----------------------*/
 footer {
     background-color: black;
+    color: rgba(220, 220, 220, 0.87);
+    text-align: center;
+    height: 100px;
+    
 }
-footer h1{
-    color: rgb(255, 245, 245);
+footer h2{
+    color: rgba(220, 220, 220, 0.87);
 }
