--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav img{
 .span-color{
     color: rgb(235, 95, 1);
 }
-/*-------------------section1----------------------------*/
+/*--------------------------Home section----------------------------*/
 
 .section1 img{
   height: 90%;
@@ -83,7 +83,7 @@ nav img{
 .section1 p{
     text-align: justify;
 }
-/*-------------------section2--------------------------*/
+/*----------------------------About section--------------------------*/
 
 .section2{
     background-image:    url(images/section2bg.png);
@@ -103,7 +103,7 @@ nav img{
 .section2 h1{
    font-size: 35px;
 }
-/*-------------Recipie section -----------------------*/
+/*----------------------Recipie section -----------------------*/
 .recipies-section{
     width: 100%;
     height: auto;
@@ -127,11 +127,49 @@ nav img{
     box-shadow: 0px 3px 4px 6px #88888831;
     margin:15px;
     padding:10px;
+    cursor: pointer;
 }
 .recipies-item img{
  width: 100%;
  height: 40%;
  border-radius: 15px;
+}
+
+/*----------Review Section-------------*/
+.review{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+.review .review-row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+.review-col{
+    display: flex;
+    margin: 3%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: justify;
+    background: #f0e7e7;
+    padding: 25px;
+    cursor: pointer;
+    
+}
+.review-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+.review-col h2{
+    margin-top: 15px;
+    text-align: left;
+}
+.review-col h3{
+    color: rgb(235, 95, 1);
 }
 /*-------------------------footer-----------------------*/
 footer {
